fix(style): refine vertical align of text/icon buttons

--- a/packages/veui-theme-dls/components/button.less
+++ b/packages/veui-theme-dls/components/button.less
@@ -225,6 +225,7 @@
     line-height: inherit;
     background-color: @dls-button-background-color-text;
     color: @dls-button-font-color-text;
+    vertical-align: inherit;
 
     &::after {
       content: "";
