--- a/packages/veui-theme-dls/components/table.less
+++ b/packages/veui-theme-dls/components/table.less
@@ -110,7 +110,6 @@
     & + .@{veui-prefix}-button,
     & + .@{veui-prefix}-link {
       margin-left: @dls-table-action-spacing;
-      vertical-align: middle;
     }
   }
 
